--- a/sass/_payment.scss
+++ b/sass/_payment.scss
@@ -13,6 +13,10 @@ form .button {
 	overflow: hidden;
 }
 
+.show-overflow{
+	overflow: visible;
+}
+
 .selectize-input {
 	display: block !important;
 }
